--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI (Bun)
 
 on:
   push:
-    branches: [main]
+    branches: [main, js-prototype]
   pull_request:
-    branches: [main]
+    branches: [main, js-prototype]
 
 jobs:
   backend-tests:
@@ -26,6 +26,15 @@ jobs:
             ~/.bun
           key: ${{ runner.os }}-bun-${{ hashFiles('backend/package.json') }}
 
+      - name: Cache mongodb-memory-server binaries
+        uses: actions/cache@v4
+        with:
+          # mongodb-memory-server stores downloaded MongoDB binaries here
+          path: |
+            ~/.cache/mongodb-binaries
+            ~/.cache/mongodb-memory-server
+          key: ${{ runner.os }}-mongodb-binaries-${{ hashFiles('backend/package.json') }}
+
       - name: Install backend dependencies (bun)
         working-directory: ./backend
         run: bun install
@@ -33,4 +42,5 @@ jobs:
       - name: Run backend tests (Vitest via bunx)
         working-directory: ./backend
         run: |
+          bunx biome check . --write && bunx biome format . --write || (echo "Lint failed" && exit 1)
           bunx vitest --config=vitest.config.cjs --run
