--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
   backend-tests:
     name: Backend tests (bun)
     runs-on: ubuntu-latest
+    env:
+      JWT_SECRET: testsecret
     steps:
       - name: Checkout
         uses: actions/checkout@v6
